Implement UnitKind, lots of to_json/from_json stuff

--- a/units_cpp/Makefile
+++ b/units_cpp/Makefile
@@ -1,12 +1,12 @@
 CXX = g++
-CXXFLAGS = -Wall -MMD -O2
+CXXFLAGS = -Wall -MMD -O2 -std=c++11
 
 EXECS = test
 DEPS = ${SRCS:.o=.d}
 
 all: ${EXECS}
 
-test: resources.o test.o
+test: colour.o resources.o unit_kind.o test.o
 	${CXX} ${CXXFLAGS} $^ -o $@
 
 -include ${DEPS}
