Create actual tests for Resources

--- a/units_cpp/Makefile
+++ b/units_cpp/Makefile
@@ -1,15 +1,29 @@
 CXX = g++
 CXXFLAGS = -Wall -MMD -O2 -std=c++11
+OBJECTS = colour.o resources.o unit_kind.o
 
-EXECS = test
-DEPS = ${SRCS:.o=.d}
+MAIN_EXEC = main
+MAIN_OBJS = ${OBJECTS} main.o
+MAIN_DEPS = ${MAIN_OBJS:.o=.d}
+
+TEST_EXEC = test
+TEST_OBJS = ${OBJECTS} tests/resources_test.o tests/test.o
+TEST_DEPS = ${TEST_OBJS:.o=.d}
+
+EXECS = ${MAIN_EXEC} ${TEST_EXEC}
 
 all: ${EXECS}
 
-test: colour.o resources.o unit_kind.o test.o
+tests/catch.hpp:
+	curl https://raw.githubusercontent.com/philsquared/Catch/master/single_include/catch.hpp > tests/catch.hpp
+
+${MAIN_EXEC}: ${MAIN_OBJS}
 	${CXX} ${CXXFLAGS} $^ -o $@
 
--include ${DEPS}
+${TEST_EXEC}: ${TEST_OBJS}
+	${CXX} ${CXXFLAGS} $^ -o $@
+
+-include ${MAIN_DEPS} ${TEST_DEPS}
 
 clean:
-	rm *.o *.d ${EXECS}
+	rm *.o *.d tests/*.o tests/*.d ${EXECS}
