--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,6 @@
-[submodule "units_cpp/godot_headers"]
+[submodule "units_cpp/gdnative/godot_headers"]
 	path = units_cpp/gdnative/godot_headers
 	url = https://github.com/GodotNativeTools/godot_headers.git
-[submodule "units_cpp/godot-cpp"]
+[submodule "units_cpp/gdnative/godot-cpp"]
 	path = units_cpp/gdnative/godot-cpp
 	url = https://github.com/GodotNativeTools/godot-cpp
