--- a/units_cpp/gdnative/SConstruct
+++ b/units_cpp/gdnative/SConstruct
@@ -37,12 +37,13 @@ elif platform == "windows":
 
     final_lib_path = final_lib_path + 'win' + str(bits) + '/'
 
-env.Append(CPPPATH=['.', 'src/', "godot_headers/", 'godot-cpp/include/', 'godot-cpp/include/core/'])
+env.Append(CPPPATH=['.', '../', 'src/', "godot_headers/", 'godot-cpp/include/', 'godot-cpp/include/core/'])
 env.Append(LIBPATH="godot-cpp/bin")
-env.Append(LIBS=["godot-cpp" + "." + platform + "." + str(bits)])
+env.Append(LIBS=["godot-cpp.%s.%s" % (platform, bits)])
 
 sources = []
 add_sources(sources, "src")
+sources.append('../resources.cc')
 
-library = env.SharedLibrary(target=final_lib_path + 'libgdexample', source=sources)
+library = env.SharedLibrary(target=final_lib_path + 'libadrestia', source=sources)
 Default(library)
