Rename resources->tech in libadrestia_gdnative

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,8 @@
-[submodule "units_cpp/gdnative/godot_headers"]
+[submodule "libadrestia_gdnative/godot_headers"]
 	path = libadrestia_gdnative/godot_headers
 	url = https://github.com/GodotNativeTools/godot_headers.git
-[submodule "units_cpp/gdnative/godot-cpp"]
+  ignore = dirty
+[submodule "libadrestia_gdnative/godot-cpp"]
 	path = libadrestia_gdnative/godot-cpp
 	url = https://github.com/GodotNativeTools/godot-cpp.git
+  ignore = dirty
