--- a/libadrestia_gdnative/SConstruct
+++ b/libadrestia_gdnative/SConstruct
@@ -15,7 +15,7 @@ if platform == "windows":
 
 def add_sources(sources, directory):
     for file in os.listdir(directory):
-        if file.endswith('.cpp'):
+        if file.endswith('.cpp') or file.endswith('.cc'):
             sources.append(directory + '/' + file)
 
 if platform == "osx":
@@ -43,7 +43,7 @@ env.Append(LIBS=["godot-cpp.%s.%s" % (platform, bits)])
 
 sources = []
 add_sources(sources, "src")
-sources.append('../units_cpp/resources.cc')
+add_sources(sources, '../units_cpp')
 
 library = env.SharedLibrary(target=final_lib_path + 'libadrestia', source=sources)
 Default(library)
