--- a/server/Makefile
+++ b/server/Makefile
@@ -1,11 +1,11 @@
 CXX = g++
 CXXFLAGS = -Wall -MMD -std=c++17 -O2
 CXXFLAGS_POST = -L/usr/local/lib64 -lpqxx -lssl -lcrypto
-MAINS = server.cc test_client.cc database_access_test.cc indigestion.cc
-OBJECTS = $(patsubst %.cc,%.o,$(filter-out $(MAINS), $(wildcard *.cc)))
+MAINS = ./server_main.cc ./test_client.cc
+OBJECTS = $(patsubst %.cc,%.o,$(filter-out $(MAINS), $(shell find . ../cpp/game_rules.cc ../cpp/book.cc ../cpp/duration.cc ../cpp/effect.cc ../cpp/effect_instance.cc ../cpp/game_state.cc ../cpp/game_view.cc ../cpp/player.cc ../cpp/random_strategy.cc ../cpp/selector.cc ../cpp/spell.cc ../cpp/sticky.cc ../cpp/sticky_instance.cc ../cpp/sticky_invoker.cc -name "*.cc")))
 
-SERVER_EXEC = server
-SERVER_OBJS = ${OBJECTS} server.o
+SERVER_EXEC = server_main
+SERVER_OBJS = ${OBJECTS} server_main.o
 SERVER_DEPS = ${SERVER_OBJS:.o=.d}
 
 CLIENT_EXEC = test_client
@@ -26,3 +26,4 @@ ${CLIENT_EXEC}: ${CLIENT_OBJS}
 
 clean:
 	rm -f *.o *.d ${EXECS}
+	rm -f handlers/*.o handlers/*.d
